<resources>
    <string name="app_name">Calculator</string>
    <string name="num_One">1</string>
    <string name="num_Two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="num_zero">0</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="clear">C</string>
    <string name="pl_min">+/-</string>
    <string name="delete">DEL</string>
    <string name="dot">.</string>
</resources>